# Parallel_Game_of_Life

./: CMakeLists.txt  README.md  main.cpp
include/: game_of_life.hpp  utils.hpp
pattern_files/: lobster.txt
plots/: report.odt  spee-up.ods
